src/antlr/coolParser.py
# Generated from cool.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class coolParser ( Parser ):

    grammarFileName = "cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'inherits'", "'{'", "'}'", "'('", 
                     "','", "')'", "':'", "'<-'", "'.'", "'@'", "'\u00CB\u0153'", 
                     "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'='", "'not'", 
                     "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KLASS", "FI", "IF", "IN", 
                      "INHERITS", "ISVOID", "LET", "LOOP", "POOL", "THEN", 
                      "ELSE", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
                      "TRUE", "FALSE", "TYPE", "ID", "INTEGER", "STRING", 
                      "COMMENT", "LINE_COMENT", "WS" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_case_stat = 5
    RULE_let_decl = 6
    RULE_primary = 7

    ruleNames =  [ "program", "klass", "feature", "formal", "expr", "case_stat", 
                   "let_decl", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    KLASS=22
    FI=23
    IF=24
    IN=25
    INHERITS=26
    ISVOID=27
    LET=28
    LOOP=29
    POOL=30
    THEN=31
    ELSE=32
    WHILE=33
    CASE=34
    ESAC=35
    NEW=36
    OF=37
    NOT=38
    TRUE=39
    FALSE=40
    TYPE=41
    ID=42
    INTEGER=43
    STRING=44
    COMMENT=45
    LINE_COMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.KlassContext)
            else:
                return self.getTypedRuleContext(coolParser.KlassContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = coolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.KLASS:
                self.state = 16
                self.klass()
                self.state = 17
                self.match(coolParser.T__0)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(coolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.TYPE)
            else:
                return self.getToken(coolParser.TYPE, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(coolParser.FeatureContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)




    def klass(self):

        localctx = coolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(coolParser.KLASS)
            self.state = 25
            self.match(coolParser.TYPE)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.T__1:
                self.state = 26
                self.match(coolParser.T__1)
                self.state = 27
                self.match(coolParser.TYPE)


            self.state = 30
            self.match(coolParser.T__2)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.ID:
                self.state = 31
                self.feature()
                self.state = 32
                self.match(coolParser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(coolParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self._formal = None # FormalContext
            self.params = list() # of FormalContexts
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FormalContext)
            else:
                return self.getTypedRuleContext(coolParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)


    class AttributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)



    def feature(self):

        localctx = coolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = coolParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(coolParser.ID)
                self.state = 42
                self.match(coolParser.T__4)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.ID:
                    self.state = 43
                    localctx._formal = self.formal()
                    localctx.params.append(localctx._formal)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__5:
                        self.state = 44
                        self.match(coolParser.T__5)
                        self.state = 45
                        localctx._formal = self.formal()
                        localctx.params.append(localctx._formal)
                        self.state = 50
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 53
                self.match(coolParser.T__6)
                self.state = 54
                self.match(coolParser.T__7)
                self.state = 55
                self.match(coolParser.TYPE)
                self.state = 56
                self.match(coolParser.T__2)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(coolParser.T__3)
                pass

            elif la_ == 2:
                localctx = coolParser.AttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(coolParser.ID)
                self.state = 61
                self.match(coolParser.T__7)
                self.state = 62
                self.match(coolParser.TYPE)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.T__8:
                    self.state = 63
                    self.match(coolParser.T__8)
                    self.state = 64
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def getRuleIndex(self):
            return coolParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = coolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(coolParser.ID)
            self.state = 70
            self.match(coolParser.T__7)
            self.state = 71
            self.match(coolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArithContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith" ):
                listener.enterArith(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith" ):
                listener.exitArith(self)


    class New_typeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(coolParser.NEW, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew_type" ):
                listener.enterNew_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew_type" ):
                listener.exitNew_type(self)


    class DispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self._expr = None # ExprContext
            self.params = list() # of ExprContexts
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDispatch" ):
                listener.enterDispatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDispatch" ):
                listener.exitDispatch(self)


    class AssignmentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class Expr_primaryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(coolParser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_primary" ):
                listener.enterExpr_primary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_primary" ):
                listener.exitExpr_primary(self)


    class Method_callContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self._expr = None # ExprContext
            self.params = list() # of ExprContexts
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(coolParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(coolParser.LOOP, 0)
        def POOL(self):
            return self.getToken(coolParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class ContentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)


    class Case_ofContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(coolParser.CASE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)

        def OF(self):
            return self.getToken(coolParser.OF, 0)
        def ESAC(self):
            return self.getToken(coolParser.ESAC, 0)
        def case_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Case_statContext)
            else:
                return self.getTypedRuleContext(coolParser.Case_statContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase_of" ):
                listener.enterCase_of(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase_of" ):
                listener.exitCase_of(self)


    class Is_voidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(coolParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIs_void" ):
                listener.enterIs_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIs_void" ):
                listener.exitIs_void(self)


    class WContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterW" ):
                listener.enterW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitW" ):
                listener.exitW(self)


    class EqualsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquals" ):
                listener.enterEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquals" ):
                listener.exitEquals(self)


    class Let_inContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(coolParser.LET, 0)
        def let_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Let_declContext)
            else:
                return self.getTypedRuleContext(coolParser.Let_declContext,i)

        def IN(self):
            return self.getToken(coolParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_in" ):
                listener.enterLet_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_in" ):
                listener.exitLet_in(self)


    class If_elseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(coolParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def THEN(self):
            return self.getToken(coolParser.THEN, 0)
        def ELSE(self):
            return self.getToken(coolParser.ELSE, 0)
        def FI(self):
            return self.getToken(coolParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else" ):
                listener.enterIf_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else" ):
                listener.exitIf_else(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = coolParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = coolParser.Expr_primaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 74
                self.primary()
                pass

            elif la_ == 2:
                localctx = coolParser.Method_callContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(coolParser.ID)
                self.state = 76
                self.match(coolParser.T__4)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0):
                    self.state = 77
                    localctx._expr = self.expr(0)
                    localctx.params.append(localctx._expr)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__5:
                        self.state = 78
                        self.match(coolParser.T__5)
                        self.state = 79
                        localctx._expr = self.expr(0)
                        localctx.params.append(localctx._expr)
                        self.state = 84
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 87
                self.match(coolParser.T__6)
                pass

            elif la_ == 3:
                localctx = coolParser.If_elseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 88
                self.match(coolParser.IF)
                self.state = 89
                self.expr(0)
                self.state = 90
                self.match(coolParser.THEN)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(coolParser.ELSE)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(coolParser.FI)
                pass

            elif la_ == 4:
                localctx = coolParser.WhileContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 96
                self.match(coolParser.WHILE)
                self.state = 97
                self.expr(0)
                self.state = 98
                self.match(coolParser.LOOP)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(coolParser.POOL)
                pass

            elif la_ == 5:
                localctx = coolParser.Let_inContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 102
                self.match(coolParser.LET)
                self.state = 103
                self.let_decl()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==coolParser.T__5:
                    self.state = 104
                    self.match(coolParser.T__5)
                    self.state = 105
                    self.let_decl()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self.match(coolParser.IN)
                self.state = 112
                self.expr(16)
                pass

            elif la_ == 6:
                localctx = coolParser.Case_ofContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 114
                self.match(coolParser.CASE)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(coolParser.OF)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 117
                    self.case_stat()
                    self.state = 120 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==coolParser.ID):
                        break

                self.state = 122
                self.match(coolParser.ESAC)
                pass

            elif la_ == 7:
                localctx = coolParser.New_typeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 124
                self.match(coolParser.NEW)
                self.state = 125
                self.match(coolParser.TYPE)
                pass

            elif la_ == 8:
                localctx = coolParser.ContentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 126
                self.match(coolParser.T__2)
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 127
                    self.expr(0)
                    self.state = 128
                    self.match(coolParser.T__0)
                    self.state = 132 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0)):
                        break

                self.state = 134
                self.match(coolParser.T__3)
                pass

            elif la_ == 9:
                localctx = coolParser.WContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 136
                self.match(coolParser.T__11)
                self.state = 137
                self.expr(11)
                pass

            elif la_ == 10:
                localctx = coolParser.Is_voidContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 138
                self.match(coolParser.ISVOID)
                self.state = 139
                self.expr(10)
                pass

            elif la_ == 11:
                localctx = coolParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 140
                self.match(coolParser.T__19)
                self.state = 141
                self.expr(2)
                pass

            elif la_ == 12:
                localctx = coolParser.AssignmentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 142
                self.match(coolParser.ID)
                self.state = 143
                self.match(coolParser.T__8)
                self.state = 144
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 204
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 202
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = coolParser.ArithContext(self, coolParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 147
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 148
                        self.match(coolParser.T__12)
                        self.state = 149
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = coolParser.ArithContext(self, coolParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 151
                        self.match(coolParser.T__13)
                        self.state = 152
                        self.expr(9)
                        pass
